--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,12 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.18.1+2
   firebase_core: ^0.5.0+1
-
+  firebase_database: ^4.2.0
+  firebase_analytics: ^5.0.2
+  image_picker: ^0.6.7+12
+  firebase_storage: ^4.0.1
+  cloud_firestore: ^0.14.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -43,7 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
